z-index bug

--- a/_assets/sass/components/_offer.scss
+++ b/_assets/sass/components/_offer.scss
@@ -16,7 +16,7 @@ $offer-max-width: 560px;
     left: 0;
     right: 0;
     bottom: 0;
-    z-index: $z-overlay;
+    z-index: $z-content-overlay;
     display: flex;
     align-items: center;
     justify-content: center;
